<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="111dp" />

        <Button
            android:id="@+id/button_result_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_result_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_layout_questions_quiz"
            app:layout_constraintVertical_bias="0.504"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="147dp" />

        <Button
            android:id="@+id/button_reset_quiz"
...
                    style="@style/QuestionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_text" />

                <EditText
                    android:id="@+id/edit_text_answer1_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/answer_text"
                    android:inputType="number" />

...
                    style="@style/QuestionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_text" />

                <RadioGroup
                    android:id="@+id/radio_group_answer2_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_answer2_correct_quiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_text" />

                    <RadioButton
                        android:id="@+id/radio_button_answer2_incorrect_quiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incorrect_text" />
                </RadioGroup>

            </TableRow>
...
                    style="@style/QuestionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5_text" />

                <EditText
                    android:id="@+id/edit_text_answer5_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/answer_text"
                    android:inputType="number"
                    android:minHeight="80dp"
...
