...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
    <!-- First Name -->
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="270dp"
        android:layout_height="45dp"
...
    <!-- Last Name -->
    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
    <!-- Street Address -->
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
    <!-- City -->
    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
    <!-- Phone -->
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
    <!-- Email -->
    <LinearLayout
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_weight="1"
...
    <!-- Position -->
    <LinearLayout
        android:id="@+id/layoutPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editTextPosition"
            android:layout_width="0dp"
            android:layout_height="43dp"
...
    <!-- Salary -->
    <LinearLayout
        android:id="@+id/layoutSalary"
        android:layout_width="0dp"
        android:layout_height="47dp"
...

        <EditText
            android:id="@+id/editTextSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
    <!-- Date Hired -->
    <LinearLayout
        android:id="@+id/layoutDateHired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editTextDateHired"
            android:layout_width="0dp"
            android:layout_height="48dp"
...
    <!-- Start Date -->
    <LinearLayout
        android:id="@+id/layoutStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
...
    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
