...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Title of the page -->
    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/main_title"
...
    <!-- Recycler View to display the list of employee -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEmployee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintBottom_toTopOf="@+id/floatingButtonAddEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:clipToPadding="false" />

    <!-- Floating button to add new employee -->
...
